src/administration/netpol/allo-all-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-namespace
spec:
  podSelector: {}
  policyTypes: [ "Ingress" ]
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: my-namespace
