src/administration/netpol/allow-intra-cluster.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-intra-cluster
spec:
  podSelector: {}
  policyTypes: [ "Egress" ]
  egress:
    - to:
      - namespaceSelector: {}
